# tungsten

./: .gitignore  pyproject.toml
tungsten/: __main__.py
tungsten/parsers/: parsing_hierarchy.py
tungsten/parsers/globally_harmonized_system/: safety_data_sheet.py  safety_data_sheet_rules.py
