[tool.poetry]
name = "tungsten"
version = "0.1.0"
description = "An MSDS parser."
authors = ["Den4200 <dennis@dennispham.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
"pdfminer.six" = "^20220524"
python = "^3.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
taskipy = "^1.10.3"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
snakeviz = "^2.1.1"

[tool.taskipy.tasks]
start = "python -m tungsten"
lint = "flake8 ."
pre-commit = "pre-commit install"
test = "pytest"
profile = "task start && task profile_viz"
profile_viz = "snakeviz program.prof"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
